--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
   "dependencies": {
     "node-cron": "^2.0.1",
     "pm2": "^3.1.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/raychat/pm2-alert.git"
   }
 }
